out.txt
file:///D:/Mini%20Project%20S6/expensebackend/backend/src/controllers/userController.js:129
} else {
  ^^^^

SyntaxError: Unexpected token 'else'
    at compileSourceTextModule (node:internal/modules/esm/utils:317:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:111:18)
    at #translate (node:internal/modules/esm/loader:541:20)
    at afterLoad (node:internal/modules/esm/loader:594:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:599:12)
    at #createModuleJob (node:internal/modules/esm/loader:623:36)
    at #getJobFromResolveResult (node:internal/modules/esm/loader:329:34)
    at ModuleLoader.getModuleJobForImport (node:internal/modules/esm/loader:294:41)

Node.js v24.11.1
